--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,13 @@
+/* 
 
+xs  screen < 576px, 
+sm	screen ≥ 576px,
+md	screen ≥ 768px, 
+lg	screen ≥ 992px, 
+xl	screen ≥ 1200px,
+xxl	screen ≥ 1600px,  
+
+*/
 
 html,
 body {
