--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,8 +13,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -26,6 +26,521 @@ a {
   box-sizing: border-box;
 }
 
+/******************************* Text Color **********************************/
+
+.primary-red {
+  color: #ef5350;
+}
+.white-high {
+  color: #ffffff;
+}
+.white-medium {
+  color: rgba(255, 255, 255, 0.7);
+}
+.white-disabled {
+  color: rgba(255, 255, 255, 0.5);
+}
+.white-inactive {
+  color: rgba(255, 255, 255, 0.54);
+}
+.font-1 {
+  color: rgba(0, 0, 0, 0.87);
+}
+.font-2 {
+  color: rgba(0, 0, 0, 0.85);
+}
+.font-3 {
+  color: rgba(0, 0, 0, 0.6);
+}
+.font-4 {
+  color: rgba(0, 0, 0, 0.45);
+}
+.font-5 {
+  color: rgba(0, 0, 0, 0.38);
+}
+.heading-color {
+  color: #243e63;
+}
+.sub-heading-color {
+  color: #718096;
+}
+
+/******************************* font-family **********************************/
+
+.roboto {
+  font-family: Roboto;
+}
+
+.poppins {
+  font-family: Poppins;
+}
+
+/***** FONT WEIGHT 700 *****/
+
+.heavy-20 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0em;
+}
+
+.heavy-18 {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0em;
+}
+
+.heavy-16 {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0em;
+}
+
+.heavy-14 {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0em;
+}
+
+.heavy-12 {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 0em;
+}
+
+.heavy-10 {
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 0em;
+}
+
+/***** FONT WEIGHT 500 *****/
+
+.bold-20 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0em;
+}
+
+.bold-18 {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+}
+
+.bold-16 {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.15px;
+}
+
+.bold-14 {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+}
+
+.bold-12 {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0em;
+}
+
+.bold-10 {
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0em;
+}
+
+/***** FONT WEIGHT 400 *****/
+
+.regular-20 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+}
+
+.regular-18 {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0em;
+}
+
+.regular-16 {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+}
+
+.regular-14 {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+}
+
+.regular-12 {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+}
+
+.regular-10 {
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+}
+
+/***** FONT WEIGHT normal *****/
+
+.normal-16 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.normal-14 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+/******************************* EXCLUSIVE SIZE TYPOGRAPHY **********************************/
+
+.heavy-80 {
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120px;
+}
+
+.heavy-70 {
+  font-size: 70px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 105px;
+}
+
+.bold-30 {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 38px;
+}
+
+.regular-35 {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 38px;
+}
+
+.regular-60 {
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 90px;
+}
+
+/******************************* MARGIN DEFINITIONS **********************************/
+
+/* MARGIN-LEFT */
+
+.ml-5 {
+  margin-left: 5px;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+
+.ml-15 {
+  margin-left: 15px;
+}
+
+.ml-20 {
+  margin-left: 20px;
+}
+
+.ml-25 {
+  margin-left: 25px;
+}
+
+.ml-30 {
+  margin-left: 30px;
+}
+
+.ml-40 {
+  margin-left: 40px;
+}
+
+.ml-50 {
+  margin-left: 50px;
+}
+
+.ml-60 {
+  margin-left: 60px;
+}
+
+.ml-70 {
+  margin-left: 70px;
+}
+
+.ml-80 {
+  margin-left: 80px;
+}
+
+.ml-90 {
+  margin-left: 90px;
+}
+
+.ml-100 {
+  margin-left: 100px;
+}
+
+/* MARGIN-TOP */
+
+.mt-5 {
+  margin-top: 5px;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+
+.mt-15 {
+  margin-top: 15px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mt-25 {
+  margin-top: 25px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
+.mt-40 {
+  margin-top: 40px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mt-60 {
+  margin-top: 60px;
+}
+
+.mt-70 {
+  margin-top: 70px;
+}
+
+.mt-80 {
+  margin-top: 80px;
+}
+
+.mt-90 {
+  margin-top: 90px;
+}
+
+.mt-100 {
+  margin-top: 100px;
+}
+
+/* MARGIN-RIGHT */
+
+.mr-5 {
+  margin-right: 5px;
+}
+
+.mr-10 {
+  margin-right: 10px;
+}
+
+.mr-15 {
+  margin-right: 15px;
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
+.mr-25 {
+  margin-right: 25px;
+}
+
+.mr-30 {
+  margin-right: 30px;
+}
+
+.mr-40 {
+  margin-right: 40px;
+}
+
+.mr-50 {
+  margin-right: 50px;
+}
+
+.mr-60 {
+  margin-right: 60px;
+}
+
+.mr-70 {
+  margin-right: 70px;
+}
+
+.mr-80 {
+  margin-right: 80px;
+}
+
+.mr-90 {
+  margin-right: 90px;
+}
+
+.mr-100 {
+  margin-right: 100px;
+}
+
+/* MARGIN-BOTTOM */
+
+.mb-5 {
+  margin-bottom: 5px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-15 {
+  margin-bottom: 15px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.mb-25 {
+  margin-bottom: 25px;
+}
+
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.mb-40 {
+  margin-bottom: 40px;
+}
+
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.mb-60 {
+  margin-bottom: 60px;
+}
+
+.mb-70 {
+  margin-bottom: 70px;
+}
+
+.mb-80 {
+  margin-bottom: 80px;
+}
+
+.mb-90 {
+  margin-bottom: 90px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
+}
+
+/* CSS TRUNCATE */
+
+.tc-1 {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.tc-2 {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.tc-3 {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.tc-4 {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+
+.tc-5 {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+}
+
+.tc-6 {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+}
+
+/******************************* BASIC GRID **********************************/
 .row {
   display: flex;
   justify-content: space-around;
@@ -40,6 +555,22 @@ a {
   align-items: center;
   width: 100%;
 }
+
+/******************************* INVISIBLE SCROLL **********************************/
+
+.invisible-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.invisible-scroll {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+/******************************* Button **********************************/
 
 .global-button {
   border: 1px solid #ef5350 !important;
@@ -79,144 +610,6 @@ a {
   line-height: 16px;
 }
 
-/* TYPOGRAPHY */
-
-.h2 {
-  font-family: 'Roboto';
-  font-size: 60px;
-  line-height: 70px;
-  font-weight: 300;
-  letter-spacing: -0.5px;
-}
-
-.h3 {
-  font-family: 'Roboto';
-  font-size: 48px;
-  line-height: 56px;
-  font-weight: normal;
-  margin-bottom: 48px;
-}
-
-.h4 {
-  font-family: 'Roboto';
-  font-size: 34px;
-  line-height: 40px;
-  font-weight: normal;
-  letter-spacing: 0.25px;
-}
-
-.h5 {
-  font-family: 'Poppins';
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: bold;
-  font-style: normal;
-}
-
-.h6 {
-  font-family: 'Poppins';
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  font-weight: 500;
-}
-
-.body1 {
-  font-family: 'Roboto';
-  font-size: 18px;
-  line-height: 28px;
-  letter-spacing: 0.5px;
-  font-weight: normal;
-}
-.body2 {
-  font-family: 'Roboto';
-  font-size: 14px;
-  line-height: 20px;
-  font-weight: normal;
-  font-style: normal;
-  letter-spacing: 0.25px;
-  color: rgba(0, 0, 0, 0.6);
-}
-.btn-text {
-  font-family: 'Roboto';
-  font-size: 14px;
-  line-height: 16px;
-  font-weight: 500;
-  letter-spacing: 0.75px;
-  text-transform: uppercase;
-}
-.subtitle1 {
-  font-family: 'Roboto';
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  font-weight: 400;
-  font-style: normal;
-  color: rgba(0, 0, 0, 0.87);
-}
-.subtitle2 {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
-  color: rgba(0, 0, 0, 0.87);
-}
-.subtitle3 {
-  font-family: 'Roboto';
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  color: #fff;
-}
-.caption {
-  font-family: 'Roboto';
-  font-size: 14px;
-  line-height: 16px;
-  font-weight: normal;
-  font-style: normal;
-  letter-spacing: 0.4px;
-  color: rgba(0, 0, 0, 0.38);
-}
-
-.caption2 {
-  font-family: Roboto;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 14px;
-  letter-spacing: 0.4px;
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.regular14 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 20px;
-  color: #12121d;
-}
-
-.regular12 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 16px;
-  color: rgba(18, 18, 29, 0.6);
-}
-
-.overline {
-  font-family: 'Roboto';
-  font-size: 10px;
-  line-height: 16px;
-  font-weight: 500;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-}
 .link-button {
   font-weight: 400;
   text-align: center;
@@ -242,307 +635,4 @@ a {
   color: #ef5350;
   letter-spacing: 0.75px;
   text-transform: uppercase;
-}
-
-.bold-28 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 28px;
-  line-height: 32px;
-  color: #c4c4c4;
-}
-
-.bold-20 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 28px;
-  color: #c4c4c4;
-}
-
-.bold-16 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 24px;
-  color: #c4c4c4;
-}
-
-.bold-14 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 20px;
-  color: #c4c4c4;
-}
-
-.bold-12 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 16px;
-  color: #c4c4c4;
-}
-
-.bold-11 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 11px;
-  line-height: 16px;
-  color: #c4c4c4;
-}
-
-.regular-20 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 28px;
-  color: #c4c4c4;
-}
-
-.regular-16 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 24px;
-  color: #c4c4c4;
-}
-
-.regular-14 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 20px;
-  color: #c4c4c4;
-}
-
-.regular-12 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 16px;
-  color: #c4c4c4;
-}
-
-.regular-11 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 11px;
-  line-height: 16px;
-  color: #c4c4c4;
-  color: #12121d;
-}
-
-.sans-16 {
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 24px;
-  letter-spacing: 0em;
-}
-
-.sans-14 {
-  font-family: Roboto;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 16px;
-  letter-spacing: 0em;
-}
-
-.scroll-list {
-  display: flex;
-  overflow-x: scroll;
-}
-/* Hide scrollbar for Chrome, Safari and Opera */
-.scroll-list::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.scroll-list {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-/* CSS TURNCATOR */
-
-.tc-1 {
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-}
-
-.tc-2 {
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-
-.tc-3 {
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-}
-
-/* MARGIN-LEFT */
-
-.ml-5 {
-  margin-left: 5px;
-}
-.ml-10 {
-  margin-left: 10px;
-}
-.ml-20 {
-  margin-left: 20px;
-}
-.ml-30 {
-  margin-left: 30px;
-}
-.ml-40 {
-  margin-left: 40px;
-}
-.ml-50 {
-  margin-left: 50px;
-}
-.ml-60 {
-  margin-left: 60px;
-}
-.ml-70 {
-  margin-left: 70px;
-}
-.ml-80 {
-  margin-left: 80px;
-}
-.ml-90 {
-  margin-left: 90px;
-}
-.ml-100 {
-  margin-left: 100px;
-}
-
-/* MARGIN-TOP */
-
-.mt-5 {
-  margin-top: 5px;
-}
-.mt-10 {
-  margin-top: 10px;
-}
-.mt-15 {
-  margin-top: 15px;
-}
-.mt-20 {
-  margin-top: 20px;
-}
-.mt-30 {
-  margin-top: 30px;
-}
-.mt-40 {
-  margin-top: 40px;
-}
-.mt-50 {
-  margin-top: 50px;
-}
-.mt-60 {
-  margin-top: 60px;
-}
-.mt-70 {
-  margin-top: 70px;
-}
-.mt-80 {
-  margin-top: 80px;
-}
-.mt-90 {
-  margin-top: 90px;
-}
-.mt-100 {
-  margin-top: 100px;
-}
-
-/* MARGIN-RIGHT */
-
-.mr-5 {
-  margin-right: 5px;
-}
-.mr-10 {
-  margin-right: 10px;
-}
-.mr-20 {
-  margin-right: 20px;
-}
-.mr-30 {
-  margin-right: 30px;
-}
-.mr-40 {
-  margin-right: 40px;
-}
-.mr-50 {
-  margin-right: 50px;
-}
-.mr-60 {
-  margin-right: 60px;
-}
-.mr-70 {
-  margin-right: 70px;
-}
-.mr-80 {
-  margin-right: 80px;
-}
-.mr-90 {
-  margin-right: 90px;
-}
-.mr-100 {
-  margin-right: 100px;
-}
-
-/* MARGIN-BOTTOM */
-
-.mb-5 {
-  margin-bottom: 5px;
-}
-.mb-10 {
-  margin-bottom: 10px;
-}
-.mb-20 {
-  margin-bottom: 20px;
-}
-.mb-30 {
-  margin-bottom: 30px;
-}
-.mb-40 {
-  margin-bottom: 40px;
-}
-.mb-50 {
-  margin-bottom: 50px;
-}
-.mb-60 {
-  margin-bottom: 60px;
-}
-.mb-70 {
-  margin-bottom: 70px;
-}
-.mb-80 {
-  margin-bottom: 80px;
-}
-.mb-90 {
-  margin-bottom: 90px;
-}
-.mb-100 {
-  margin-bottom: 100px;
 }
