add read-only test card

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,8 +13,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -635,4 +635,8 @@ a {
   color: #ef5350;
   letter-spacing: 0.75px;
   text-transform: uppercase;
+}
+
+.test-modal .ant-modal-content {
+  width: fit-content;
 }
